Fixed mobile styling on About page, menu and added Smooth-Scroll Polyfill which will be jumpy on safari, but oh well.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
   }
   @media only screen and (max-width: 600px) {
     .text-7xl-about {
-      font-size: 2.5rem;
+      font-size: 2.3rem;
     }
   }
 
@@ -227,7 +227,12 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
   }
   @media only screen and (max-width: 768px) {
     .text-8xl {
-      font-size: 3.15rem;
+      font-size: 3rem;
+    }
+  }
+  @media only screen and (max-width: 320px) {
+    .text-8xl {
+      font-size: 2rem;
     }
   }
 
